@startuml

title __PIZZAS's Class Diagram__\n

  namespace com.example.dip.demodippizzamanager {
    namespace pizzas {
      class com.example.dip.demodippizzamanager.pizzas.CheesePizza {
          + CheesePizza()
          + prepare()
      }
    }
  }
  

  namespace com.example.dip.demodippizzamanager {
    namespace pizzas {
      class com.example.dip.demodippizzamanager.pizzas.ClamPizza {
          + ClamPizza()
          + prepare()
      }
    }
  }
  

  namespace com.example.dip.demodippizzamanager {
    namespace pizzas {
      class com.example.dip.demodippizzamanager.pizzas.PepperoniPizza {
          + PepperoniPizza()
          + prepare()
      }
    }
  }
  

  namespace com.example.dip.demodippizzamanager {
    namespace pizzas {
      abstract class com.example.dip.demodippizzamanager.pizzas.Pizza {
          ~ name : String
          ~ veggies : Veggies[]
          + bake()
          + box()
          + cut()
          + getName()
          {abstract} + prepare()
          + setName()
      }
    }
  }
  

  namespace com.example.dip.demodippizzamanager {
    namespace pizzas {
      class com.example.dip.demodippizzamanager.pizzas.VeggiePizza {
          + VeggiePizza()
          + prepare()
      }
    }
  }
  

  com.example.dip.demodippizzamanager.pizzas.CheesePizza -up-|> com.example.dip.demodippizzamanager.pizzas.Pizza
  com.example.dip.demodippizzamanager.pizzas.CheesePizza o-- com.example.dip.demodippizzamanager.factories.PizzaIngredientFactory : ingredientFactory
  com.example.dip.demodippizzamanager.pizzas.ClamPizza -up-|> com.example.dip.demodippizzamanager.pizzas.Pizza
  com.example.dip.demodippizzamanager.pizzas.ClamPizza o-- com.example.dip.demodippizzamanager.factories.PizzaIngredientFactory : ingredientFactory
  com.example.dip.demodippizzamanager.pizzas.PepperoniPizza -up-|> com.example.dip.demodippizzamanager.pizzas.Pizza
  com.example.dip.demodippizzamanager.pizzas.PepperoniPizza o-- com.example.dip.demodippizzamanager.factories.PizzaIngredientFactory : ingredientFactory
  com.example.dip.demodippizzamanager.pizzas.Pizza o-- com.example.dip.demodippizzamanager.ingredients.Cheese : cheese
  com.example.dip.demodippizzamanager.pizzas.Pizza o-- com.example.dip.demodippizzamanager.ingredients.Clams : clam
  com.example.dip.demodippizzamanager.pizzas.Pizza o-- com.example.dip.demodippizzamanager.ingredients.Dough : dough
  com.example.dip.demodippizzamanager.pizzas.Pizza o-- com.example.dip.demodippizzamanager.ingredients.Pepperoni : pepperoni
  com.example.dip.demodippizzamanager.pizzas.Pizza o-- com.example.dip.demodippizzamanager.ingredients.Sauce : sauce
  com.example.dip.demodippizzamanager.pizzas.Pizza o-- com.example.dip.demodippizzamanager.ingredients.Veggies : veggies
  com.example.dip.demodippizzamanager.pizzas.VeggiePizza -up-|> com.example.dip.demodippizzamanager.pizzas.Pizza
  com.example.dip.demodippizzamanager.pizzas.VeggiePizza o-- com.example.dip.demodippizzamanager.factories.PizzaIngredientFactory : ingredientFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
